--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
+    "lucide-react": "^0.511.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
